Added Math Library

--- a/Launch/Launch.vcxproj
+++ b/Launch/Launch.vcxproj
@@ -148,10 +148,21 @@
     <ClInclude Include="src\Launch\Core.h" />
     <ClInclude Include="src\Launch\EntryPoint.h" />
     <ClInclude Include="src\Launch\Log.h" />
+    <ClInclude Include="src\Launch\Math\Math.h" />
+    <ClInclude Include="src\Launch\Math\Matrix3.h" />
+    <ClInclude Include="src\Launch\Math\Matrix4.h" />
+    <ClInclude Include="src\Launch\Math\Vector2.h" />
+    <ClInclude Include="src\Launch\Math\Vector3.h" />
+    <ClInclude Include="src\Launch\Math\Vector4.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Launch\Application.cpp" />
     <ClCompile Include="src\Launch\Log.cpp" />
+    <ClCompile Include="src\Launch\Math\Matrix3.cpp" />
+    <ClCompile Include="src\Launch\Math\Matrix4.cpp" />
+    <ClCompile Include="src\Launch\Math\Vector2.cpp" />
+    <ClCompile Include="src\Launch\Math\Vector3.cpp" />
+    <ClCompile Include="src\Launch\Math\Vector4.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
