Quick class fixes

--- a/Launch/Launch.vcxproj.filters
+++ b/Launch/Launch.vcxproj.filters
@@ -24,6 +24,8 @@
     <ClInclude Include="src\Launch\Math\Vector2.h" />
     <ClInclude Include="src\Launch\Math\Vector3.h" />
     <ClInclude Include="src\Launch\Math\Vector4.h" />
+    <ClInclude Include="src\Launch\Graphics\Graphics.h" />
+    <ClInclude Include="src\Launch\Transform.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Launch\Application.cpp">
@@ -37,5 +39,7 @@
     <ClCompile Include="src\Launch\Math\Vector2.cpp" />
     <ClCompile Include="src\Launch\Math\Vector3.cpp" />
     <ClCompile Include="src\Launch\Math\Vector4.cpp" />
+    <ClCompile Include="src\Launch\Graphics\Graphics.cpp" />
+    <ClCompile Include="src\Launch\Transform.cpp" />
   </ItemGroup>
 </Project>
