--- a/Launch/Launch.vcxproj.filters
+++ b/Launch/Launch.vcxproj.filters
@@ -26,6 +26,8 @@
     <ClInclude Include="src\Launch\Math\Vector4.h" />
     <ClInclude Include="src\Launch\Graphics\Graphics.h" />
     <ClInclude Include="src\Launch\Transform.h" />
+    <ClInclude Include="src\Launch\EngineObject.h" />
+    <ClInclude Include="src\Launch\ObjectTest.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Launch\Application.cpp">
@@ -41,5 +43,6 @@
     <ClCompile Include="src\Launch\Math\Vector4.cpp" />
     <ClCompile Include="src\Launch\Graphics\Graphics.cpp" />
     <ClCompile Include="src\Launch\Transform.cpp" />
+    <ClCompile Include="src\Launch\ObjectTest.cpp" />
   </ItemGroup>
 </Project>
