--- a/Launch/Launch.vcxproj.filters
+++ b/Launch/Launch.vcxproj.filters
@@ -27,6 +27,8 @@
     <ClInclude Include="src\Launch\Graphics\Graphics.h" />
     <ClInclude Include="src\Launch\Transform.h" />
     <ClInclude Include="src\Launch\EngineObject.h" />
+    <ClInclude Include="src\Launch\Actor.h" />
+    <ClInclude Include="src\Launch\Components\Component.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Launch\Application.cpp">
@@ -42,5 +44,7 @@
     <ClCompile Include="src\Launch\Math\Vector4.cpp" />
     <ClCompile Include="src\Launch\Graphics\Graphics.cpp" />
     <ClCompile Include="src\Launch\Transform.cpp" />
+    <ClCompile Include="src\Launch\Actor.cpp" />
+    <ClCompile Include="src\Launch\Components\Component.cpp" />
   </ItemGroup>
 </Project>
