--- a/Launch/Launch.vcxproj
+++ b/Launch/Launch.vcxproj
@@ -157,6 +157,8 @@
     <ClInclude Include="src\Launch\EngineObject.h" />
     <ClInclude Include="src\Launch\EntryPoint.h" />
     <ClInclude Include="src\Launch\Graphics\Graphics.h" />
+    <ClInclude Include="src\Launch\Graphics\IGraphicsAPI.h" />
+    <ClInclude Include="src\Launch\Graphics\OpenGL.h" />
     <ClInclude Include="src\Launch\Log.h" />
     <ClInclude Include="src\Launch\Math\Matrix3.h" />
     <ClInclude Include="src\Launch\Math\Matrix4.h" />
@@ -172,6 +174,7 @@
     <ClCompile Include="src\Launch\Application.cpp" />
     <ClCompile Include="src\Launch\Components\Component.cpp" />
     <ClCompile Include="src\Launch\Graphics\Graphics.cpp" />
+    <ClCompile Include="src\Launch\Graphics\OpenGL.cpp" />
     <ClCompile Include="src\Launch\Log.cpp" />
     <ClCompile Include="src\Launch\Math\Matrix3.cpp" />
     <ClCompile Include="src\Launch\Math\Matrix4.cpp" />
